--- a/AWS Services/Storage/S3.md
+++ b/AWS Services/Storage/S3.md
@@ -53,3 +53,11 @@ https://docs.aws.amazon.com/vpc/latest/privatelink/vpc-endpoints-s3.html
 - **Cross-region bucket access**
     
     Allows you to access a bucket without needing to know the bucket's region in advance. This feature is available in the AWS SDK for Java 2.0.
+
+# Object Lock
+
+### Retention modes
+https://docs.aws.amazon.com/AmazonS3/latest/userguide/object-lock.html#:~:text=or%20governance.-,Retention%20modes,-S3%20Object%20Lock
+governance mode:
+compliance mode
+
