--- a/SAA/SAA 981 - 901.md
+++ b/SAA/SAA 981 - 901.md
@@ -663,17 +663,119 @@ B
 
 ## 947(?)
 
+## 930
+A company has an employee web portal. Employees log in to the portal to view **payroll** details. The company is developing a new system to give employees the ability to upload scanned documents for **reimbursement**. The company runs a program to extract text-based data from the documents and attach the extracted information to each employee’s reimbursement IDs for processing.
+The employee web portal requires 100% uptime. The document extract program runs infrequently throughout the day on an on-demand basis. The company wants to build a scalable and cost-effective new system that will require minimal changes to the existing web portal. The company does not want to make any code changes.
+Which solution will meet these requirements with the LEAST implementation effort?
+A. Run Amazon EC2 On-Demand Instances in an Auto Scaling group for the web portal. Use an AWS Lambda function to run the document extract program. Invoke the Lambda function when an employee uploads a new reimbursement document.
+B. Run Amazon EC2 Spot Instances in an Auto Scaling group for the web portal. Run the document extract program on EC2 Spot Instances. Start document extract program instances when an employee uploads a new reimbursement document.
+C. Purchase a [[Savings Plan]] to run the web portal and the document extract program. Run the web portal and the document extract program in an Auto Scaling group.
+D. Create an Amazon S3 bucket to host the web portal. Use Amazon API Gateway and an AWS Lambda function for the existing functionalities. Use the Lambda function to run the document extract program. Invoke the Lambda function when the API that is associated with a new document upload is called.
 
-## 921(?)
-A company recently migrated a monolithic application to an Amazon EC2 instance and Amazon RDS. The application has tightly coupled modules. The existing design of the application gives the application the ability to run on only a single EC2 instance.
+## 929(?)
+A healthcare company is developing an AWS Lambda function that publishes notifications to an **encrypted**(@???) Amazon Simple Notification Service (Amazon SNS) topic. The notifications contain protected health information (PHI). The SNS topic uses AWS Key Management Service (AWS KMS) customer managed keys for encryption. The company must ensure that the application has the necessary permissions to publish messages securely to the SNS topic.
+Which combination of steps will meet these requirements? (Choose three.)
+A. Create a resource policy for the SNS topic that allows the Lambda function to publish messages to the topic.
+B. Use server-side encryption with AWS KMS keys (SSE-KMS) for the SNS topic instead of customer managed keys.
+C. Create a resource policy for the encryption key that the SNS topic uses that has the necessary AWS KMS permissions.
+D. Specify the Lambda function's Amazon Resource Name (ARN) in the SNS topic's resource policy.
+E. Associate an Amazon API Gateway HTTP API with the SNS topic to control access to the topic by using API Gateway resource policies.
+F. Configure a Lambda execution role that has the necessary IAM permissions to use a customer managed key in AWS KMS.
+
+## 928
+A company hosts a video streaming web application in a VPC. The company uses a Network Load Balancer (NLB) to handle TCP traffic for realtime data processing. There have been unauthorized ==attempts to== access the application. The company wants to improve application security with minimal architectural change to prevent unauthorized attempts to access the application.
+Which solution will meet these requirements?
+A. Implement a series of AWS WAF rules directly on the NLB to filter out unauthorized traffic.
+B. Recreate the NLB with a security group to allow only trusted IP addresses.
+C. Deploy a second NLB in parallel with the existing NLB configured with a strict IP address allow list.
+D. Use AWS Shield Advanced to provide enhanced DDoS protection and prevent unauthorized access attempts.
+
+- **NLBs do not support security groups**. [[Security groups]] can only be attached to instances behind the NLB or to ALBs. Therefore, this option is also invalid because an NLB cannot have a security group directly applied to it.
+> **NLBs cannot apply IP-based allow lists directly**. IP is layer3
+
+## 927
+A company is building an application in the AWS Cloud. The application is hosted on Amazon EC2 instances behind an Application Load Balancer (ALB). The company uses Amazon Route 53 for the DNS. The company needs a managed solution with proactive engagement to detect against DDoS attacks.  Which solution will meet these requirements?
+
+A. Enable AWS [[Config]]. Configure an AWS Config managed rule that detects DDoS attacks.
+B. Enable AWS [[WAF]] on the ALB, Create an AWS WAF web ACL with rules to detect and prevent DDoS attacks. Associate the web [[ACL]] with the ALB.
+C. Store the ALB access logs in an Amazon S3 bucket. Configure Amazon [[GuardDuty]] to detect and take automated preventative actions for DDoS attacks.
+D. Subscribe to AWS Shield Advanced. Configure hosted zones in Route 53. Add ALB resources as protected resources.
+
+>  protected: creating or controlling a situation by causing something to happen rather than responding to it after it has happened.
+
+[[DDoS Preventing]]
+
+## 926
+A company runs its customer-facing web application on containers. The workload uses Amazon Elastic Container Service (Amazon ECS) on AWS Fargate. The web application is resource intensive.
+The web application needs to be available 24 hours a day, 7 days a week for customers. The company expects the application to experience short bursts of high traffic. The workload must be highly available. 
+Which solution will meet these requirements MOST cost-effectively?
+A. Configure an ECS capacity provider with [[Fargate]]. Conduct load testing by using a third-party tool. Rightsize the Fargate tasks in Amazon CloudWatch.
+B. Configure an ECS capacity provider with Fargate for steady state and Fargate Spot for burst traffic.
+C. Configure an ECS capacity provider with Fargate Spot for steady state and Fargate for burst traffic.
+D. Configure an ECS capacity provider with Fargate. Use AWS Compute Optimizer to rightsize the Fargate task.
+
+> rightsize: convert (something) to an appropriate or optimum size.
+
+B
+
+**Fargate Spot**: Fargate Spot is a cost-saving option for workloads that can tolerate interruptions. It allows you to run containers at a significantly lower cost for burst or less critical traffic when the application doesn't need the guaranteed capacity that standard Fargate provides.
+
+**Option A**: While rightsizing Fargate tasks with CloudWatch metrics can help optimize resource usage, it does not take advantage of cost-saving options like Fargate Spot. Furthermore, conducting load testing is not directly related to the ongoing cost management and scaling of the application.
+
+**Option D**: While AWS Compute Optimizer helps with rightsizing resources, it is not directly related to burst traffic handling or cost-efficiency. It focuses more on optimizing resource configurations but does not provide the flexibility of using Fargate Spot for burst traffic.
+
+## 925
+A company needs to implement a new data retention policy for regulatory compliance. As part of this policy, sensitive documents that are stored in an Amazon S3 bucket must be protected from deletion or modification for a fixed period of time.
+Which solution will meet these requirements?
+A. Activate [[S3#Object Lock]]  on the required objects and enable governance mode.
+B. Activate S3 Object Lock on the required objects and enable compliance mode.
+C. Enable versioning on the S3 bucket. Set a lifecycle policy to delete the objects after a specified period.
+D. Configure an S3 Lifecycle policy to transition objects to S3 Glacier Flexible Retrieval for the retention duration.
+B
+## 924
+A company runs all its business applications in the AWS Cloud. The company uses AWS Organizations to manage multiple AWS accounts. A solutions architect needs to review all permissions that are granted to IAM users to determine which IAM users have more permissions than required.
+Which solution will meet these requirements with the LEAST administrative overhead?
+A. Use Network Access Analyzer to review all access permissions in the company's AWS accounts.
+B. Create an AWS CloudWatch alarm that activates when an IAM user creates or modifies resources in an AWS account.
+C. Use AWS Identity and Access Management ([[IAM]]) Access Analyzer to review all the company’s resources and accounts.
+D. Use Amazon Inspector to find vulnerabilities in existing IAM policies.
+C
+
+## 923
+A company hosts a monolithic web application on an Amazon EC2 instance. Application users have recently reported poor performance at specific times. Analysis of Amazon CloudWatch metrics shows that CPU utilization is 100% during the periods of poor performance. The company wants to resolve this performance issue and improve application availability.
+Which combination of steps will meet these requirements MOST cost-effectively? (Choose two.)
+A. Use AWS [[Compute Optimizer]] to obtain a recommendation for an instance type to scale vertically.
+B. Create an Amazon Machine Image (AMI) from the web server. Reference the AMI in a new launch template.
+C. Create an Auto Scaling group and an Application Load Balancer to scale vertically. (@this is horizontal)
+D. Use AWS Compute Optimizer to obtain a recommendation for an instance type to scale horizontally.
+E. Create an Auto Scaling group and an Application Load Balancer to scale horizontally.
+AE
+
+## 922
+A company needs to grant a team of developers access to the company's AWS resources. The company must maintain a high level of security for the resources. The company requires an access control solution that will prevent unauthorized access to the sensitive data.
+Which solution will meet these requirements?
+A. Share the IAM user credentials for each development team member with the rest of the team to simplify access management and to streamline development workflows.
+B. Define IAM roles that have fine-grained permissions based on the principle of least privilege. Assign an IAM role to each developer. (@ the principle of least privilege)
+C. Create IAM access keys to grant programmatic access to AWS resources. Allow only developers to interact with AWS resources through API calls by using the access keys.
+D. Create an AWS Cognito user pool. Grant developers access to AWS resources by using the user pool.
+
+B
+Option A: Sharing IAM user credentials among team members is not secure and goes against AWS security best practices. This approach makes it difficult to track individual user actions and increases the risk of credential exposure.
+
+IAM roles support temporary, session-based access through AWS Single Sign-On ([[SSO]]) or federated identity providers
+## 921
+A company recently migrated a monolithic application to an Amazon EC2 instance and Amazon [[RDS]]. The application has tightly coupled modules. The existing design of the application gives the application the ability to run on only a single EC2 instance.
 The company has noticed high CPU utilization on the EC2 instance during peak usage times. The high CPU utilization corresponds to degraded performance on Amazon RDS for read requests. The company wants to reduce the high CPU utilization and improve read request performance.
 Which solution will meet these requirements?
 
-A. Resize the EC2 instance to an EC2 instance type that has more CPU capacity. Configure an Auto Scaling group with a minimum and maximum size of 1. Configure an RDS read replica for read requests.
+A. Resize the EC2 instance to an EC2 instance type that has more CPU capacity. Configure an [[ASG]] with a minimum and maximum size of 1. Configure an RDS read replica for read requests.
 B. Resize the EC2 instance to an EC2 instance type that has more CPU capacity. Configure an Auto Scaling group with a minimum and maximum size of 1. Add an RDS read replica and redirect all read/write traffic to the replica.
 C. Configure an Auto Scaling group with a minimum size of 1 and maximum size of 2. Resize the RDS DB instance to an instance type that has more CPU capacity.
 D. Resize the EC2 instance to an EC2 instance type that has more CPU capacity. Configure an Auto Scaling group with a minimum and maximum size of 1. Resize the RDS DB instance to an instance type that has more CPU capacity.
 
+A
+
+ASG with Min and Max Size of 1: Configuring an Auto Scaling Group (ASG) with a minimum and maximum size of 1 ensures that if the instance fails, it will automatically be replaced, improving fault tolerance without scaling out to multiple instances (since the application is monolithic and can run only on a single instance).
 ## 920
 A company is migrating from a monolithic architecture for a web application that is hosted on Amazon EC2 to a serverless microservices architecture. The company wants to use AWS services that support an event-driven, loosely coupled architecture. The company wants to use the publish/subscribe (pub/sub) pattern.
 Which solution will meet these requirements MOST cost-effectively?
