--- a/SAA/SAA 801 - 900.md
+++ b/SAA/SAA 801 - 900.md
@@ -627,3 +627,111 @@ B
 Upload, TCP > AWS Global Accelerator
 
 ### 841
+A company uses Amazon EC2 instances and Amazon Elastic Block Store (Amazon [[EBS]]) to run its self-managed database. The company has 350 TB of data spread across all EBS volumes. The company takes daily EBS snapshots and keeps the snapshots for 1 month. The daily change rate is 5% of the EBS volumes. Because of new regulations, the company needs to keep the monthly snapshots for 7 years. The company needs to change its backup strategy to comply with the new regulations and to ensure that data is available with minimal administrative effort.
+Which solution will meet these requirements MOST cost-effectively?
+A. Keep the daily snapshot in the EBS snapshot standard tier for 1 month. Copy the monthly snapshot to Amazon S3 Glacier Deep Archive with a 7-year retention period.
+> managing snapshots outside of EBS. => complex
+
+B. Continue with the current EBS snapshot policy. Add a new policy to move the monthly snapshot to Amazon [[EBS]] Snapshots Archive with a 7-year retention period. 
+
+[[EBS#Snapshot#Archive]]
+
+B
+
+### 842
+A company runs an application on several Amazon EC2 instances that store persistent data on an Amazon Elastic File System (Amazon [[EFS]]) file system. The company needs to replicate the data to another AWS Region by using an AWS managed service solution.
+Which solution will meet these requirements MOST cost-effectively?
+A. Use the EFS-to-EFS backup solution to replicate the data to an EFS file system in another Region.
+D. Use AWS [[Backup]] to create a backup plan with a rule that takes a daily backup and replicates it to another Region. Assign the EFS file system resource to the backup plan.
+
+D
+
+### 843
+An ecommerce company is migrating its on-premises workload to the AWS Cloud. The workload currently consists of a web application and a backend Microsoft SQL database for storage. The company expects a high volume of customers during a promotional event. The new infrastructure in the AWS Cloud must be highly available and scalable.
+Which solution will meet these requirements with the LEAST administrative overhead?
+A. Migrate the web application to two Amazon EC2 instances across two Availability Zones behind an Application Load Balancer. Migrate the database to Amazon RDS for Microsoft SQL Server with read replicas in both Availability Zones.
+> no ASG no multi-AZ failvover
+
+C. Migrate the web application to Amazon EC2 instances that run in an Auto Scaling group across two Availability Zones behind an Application Load Balancer. Migrate the database to Amazon RDS with Multi-AZ deployment.
+C
+
+### 844
+A company has an on-premises business application that generates hundreds of files each day. These files are stored on an [[SMB]] file share and require a low-latency connection to the application servers. A new company policy states all application-generated files must be copied to AWS.
+There is already a VPN connection to AWS.
+The application development team does not have time to make the necessary code modifications to move the application to AWS.
+Which service should a solutions architect recommend to allow the application to copy files to AWS?
+A. Amazon Elastic File System (Amazon EFS)
+B. Amazon FSx for Windows File Server
+C. AWS Snowball
+D. AWS [[Storage Gateway]]
+
+Option B (Amazon FSx for Windows File Server): While Amazon FSx for Windows File Server provides SMB-compatible file storage, it is primarily intended for use within AWS or with specific on-premises setups that require FSx over a Direct Connect connection. It does not support automatic file copying from an on-premises SMB file share without changes to the existing application.
+
+D
+
+### 845
+A company has 15 employees. The company stores employee start dates in an Amazon DynamoDB table. The company wants to send an email message to each employee on the day of the employee's work anniversary.
+Which solution will meet these requirements with the MOST operational efficiency?
+A. Create a script that scans the DynamoDB table and uses Amazon Simple Notification Service (Amazon SNS) to send email messages to employees when necessary. Use a cron job to run this script every day on an Amazon EC2 instance.
+
+B. Create a script that scans the DynamoDB table and uses Amazon Simple Queue Service (Amazon SQS) to send email messages to employees when necessary. Use a cron job to run this script every day on an Amazon EC2 instance.
+
+C. Create an AWS Lambda function that scans the DynamoDB table and uses Amazon Simple Notification Service (Amazon SNS) to send email messages to employees when necessary. Schedule this Lambda function to run every day.
+
+D. Create an AWS Lambda function that scans the DynamoDB table and uses Amazon Simple Queue Service (Amazon SQS) to send email messages to employees when necessary. Schedule this Lambda function to run every day.
+
+C
+> Running a script on an **Amazon EC2 instance** adds unnecessary operational overhead because the instance must be managed, monitored, and kept available daily.
+
+> can SQS send email? NO
+
+### 846
+A company’s application is running on Amazon EC2 instances within an Auto Scaling group behind an Elastic Load Balancing (ELB) load balancer. Based on the application's history, the company anticipates a spike in traffic during a holiday each year. A solutions architect must design a strategy to ensure that the Auto Scaling group proactively increases capacity to minimize any performance impact on application users.
+Which solution will meet these requirements?
+B. Create a recurring scheduled action to scale up the Auto Scaling group before the expected period of peak demand.
+C. Increase the minimum and maximum number of EC2 instances in the Auto Scaling group during the peak demand period.
+
+B
+
+高峰期时间上可预测 -> schedule
+
+[[EC2]]
+
+### 847
+A company uses Amazon RDS for PostgreSQL databases for its data tier. The company must implement password rotation for the databases. Which solution meets this requirement with the LEAST operational overhead?
+A. Store the password in AWS [[Secrets Manager]]. Enable automatic rotation on the secret.
+B. Store the password in AWS Systems Manager Parameter Store. Enable automatic rotation on the parameter.
+C. Store the password in AWS [[Systems Manager#Parameter Store]]. Write an AWS Lambda function that rotates the password.
+D. Store the password in AWS Key Management Service (AWS [[KMS]]). Enable automatic rotation on the AWS KMS key.
+
+A
+
+### 848
+A company runs its application on Oracle Database Enterprise Edition. The company needs to migrate the application and the database to AWS. The company can use the Bring Your Own License (BYOL) model while migrating to AWS. The application uses third-party database features that require privileged access.
+A solutions architect must design a solution for the database migration.
+Which solution will meet these requirements MOST cost-effectively?
+A. Migrate the database to Amazon RDS for Oracle by using native tools. Replace the third-party features with AWS Lambda.
+B. Migrate the database to Amazon RDS Custom for Oracle by using native tools. Customize the new database settings to support the thirdparty features.
+
+> Bring Your Own License
+
+B
+
+> BYOL + third-party features/applications = RDS Custom.
+> Amazon RDS Custom for Oracle by using native tools= to support the third-party features.
+
+### 849
+A large international university has deployed all of its compute services in the AWS Cloud. These services include Amazon EC2, Amazon RDS, and Amazon DynamoDB. The university currently relies on many custom scripts to back up its infrastructure. However, the university wants to centralize management and automate data backups as much as possible by using AWS native options.
+Which solution will meet these requirements?
+A. Use third-party backup software with an AWS Storage Gateway tape gateway virtual tape library.
+B. Use AWS [[Backup]] to configure and monitor all backups for the services in use.
+C. Use AWS Config to set lifecycle management to take snapshots of all data sources on a schedule.
+D. Use AWS [[Systems Manager#State Manager]]  to manage the configuration and monitoring of backup tasks.
+
+B
+> AWS native tool that will support EC2, RDS and DynamoDB = AWS Backup
+
+
+### 850 #todo calculate correct rate
+> Copy first
+
